added input output files and solutions of question 1-6

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ out/
 /New Folder/parkingsystem/build/
 /New Folder/parkingsystem/dist/
 /auto/build/
+/solution/build/
+/solution/nbproject/private/
